* Stop email wrapping from clipping on small screens. * Update post gallery styling to better align info/images on different screen sizes.

--- a/themes/frame/source/css/partials/post_gallery.styl
+++ b/themes/frame/source/css/partials/post_gallery.styl
@@ -20,14 +20,15 @@
             overflow hidden
             
             .post-info
-                margin-right $margin-l-0
-                margin-left $margin-m-1
                 width 100%
                 display flex
+                position relative
                 flex-direction column
                 color $color-text-secondary
                 justify-content flex-start  // Ensure content starts from the top
-                padding-top 0  // Remove any top padding
+                padding-top 0  
+                margin-right 50px
+                margin-left 10px
 
                 .post-date
                     text-style(post-date)
@@ -50,33 +51,53 @@
 
                 img
                     display block
-                    width calc(100% - 20px)
+                    width 100%
                     height auto  // Let image height be natural
                     min-height 200px
                     max-height none
                     object-fit cover
                     object-position center
                     border-radius 10px
-                    margin 0 auto
         
 @media (max-width: 860px)
     .post-gallery-item
         flex-direction column
         align-items flex-start
         overflow hidden
-    
+
+        .post-info
+            margin-right 0
+            margin-left 0
+            
         .post-img
             position relative
             display block
             margin-top $margin-m-1
-            box-sizing border-box
             text-align center
 
             img
                 display block
-                width calc(100% - 20px)
-                margin-left auto
-                margin-right auto
+                width 100%
                 object-fit cover
                 object-position center
-                border-radius 10px
+    
+@media (min-width: 861px) and (max-width: 1199px)
+    .post-gallery-item
+        align-items stretch  // Make both children stretch to same height
+        
+        .post-img
+            position relative
+            display flex
+            margin-top $margin-m-1
+            text-align center
+            align-items center
+            justify-content center
+            min-height 200px  // Ensure minimum height
+    
+            img
+                display block
+                width 100%
+                height auto  // Keep natural aspect ratio
+                max-height 100%  // Prevent overflow
+                object-fit cover
+                object-position center
